<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/entry_group"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_entry_group"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="26dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="159dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="33sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:textAppearance="@style/time"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:gravity="center" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="7dp"
            android:gravity="center"

            android:textAppearance="@style/dayOfWeek"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time" />

        <ImageView
            android:id="@+id/icon_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@id/time"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_weather" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:textAppearance="@style/temperature"
            app:layout_constraintStart_toEndOf="@id/icon_weather"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/info_group"
        android:src="@drawable/ic_logo"
        android:layout_marginTop="186dp" />

    <TextView
        android:id="@+id/ewalle"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="17.6dp"
        android:gravity="center"
        android:text="@string/titleLogo"
        android:textAppearance="@style/title"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/descWallet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="@string/descWallet"
        android:textAppearance="@style/description"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/ewalle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="27dp"
        android:lineSpacingExtra="2sp" />

    <TextView
        android:id="@+id/join_for_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="top"
        android:lineSpacingExtra="2sp"
        android:text="@string/joinFree"
        android:textAppearance="@style/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/descWallet" />

    <ImageButton
        android:id="@+id/button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:background="@drawable/ic_bg_sign_in"
        app:layout_constraintBottom_toTopOf="@+id/create_account"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:contentDescription="@string/signIn" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/signIn"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:textAppearance="@style/signIn"
        app:layout_constraintBottom_toBottomOf="@+id/button_sign_in"
        app:layout_constraintEnd_toStartOf="@id/ic_sign_in"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/button_sign_in" />

    <ImageView
        android:id="@+id/ic_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_sign_in"
        app:layout_constraintBottom_toBottomOf="@+id/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/button_sign_in"
        app:layout_constraintStart_toEndOf="@id/sign_in"
        app:layout_constraintTop_toTopOf="@id/sign_in" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="53dp"
        android:gravity="center"
        android:text="@string/createAccount"
        android:textAppearance="@style/createAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/button_sign_in"
        app:layout_constraintEnd_toEndOf="@id/button_sign_in" />

</androidx.constraintlayout.widget.ConstraintLayout>