<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:openDrawer="start"
    tools:context=".ui.MainActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_menu"
        app:menu="@menu/main_menu"
        android:background="@color/bg_card"
        app:itemVerticalPadding="16dp"
        app:itemHorizontalPadding="30dp"
        app:itemTextAppearance="@style/menuItem"
        app:itemBackground="@android:color/transparent"
        app:itemTextColor="@color/drawer_item"
        android:layout_marginStart="-65dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/full_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_logout"
                android:layout_marginBottom="107dp"
                android:layout_marginStart="30dp" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textAppearance="@style/menuItem"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="@id/image_logout"
                app:layout_constraintStart_toEndOf="@id/image_logout"
                app:layout_constraintBottom_toBottomOf="@id/image_logout"
                android:textStyle="bold"
                android:textColor="@color/menu_item_color"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textAppearance="@style/version"
                android:gravity="center_horizontal|top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="27dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.navigation.NavigationView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/mainFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="30dp"
            android:paddingStart="25dp"
            android:paddingEnd="15dp"
            android:background="@color/bg_base">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/btn_menu"
                    android:background="@drawable/ic_menu"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="47dp"
                    android:layout_height="31dp"
                    android:src="@drawable/ic_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/ewalle"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:text="@string/titleLogo"
                    android:theme="@style/title"
                    android:fontFamily="@font/ubuntu_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/logo"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>