<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="25dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="47dp"
                android:layout_height="31dp"
                android:src="@drawable/ic_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ewalle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/titleLogo"
                android:textAppearance="@style/title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/logo"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/ic_menu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:lineSpacingExtra="3sp"
            android:text="@string/accountOverview"
            android:textAppearance="@style/infoGroup"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/overview_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/ic_bg_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/overview">

            <TextView
                android:id="@+id/balance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="26dp"
                android:gravity="center"
                android:text="20,600"
                android:textAppearance="@style/balance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/current_bal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="26dp"
                android:gravity="center"
                android:text="Current balance"
                android:textAppearance="@style/descriptionCard"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/balance" />

            <ImageButton
                android:id="@+id/btn_add_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="34dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/ic_btn_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/send_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/sendMoney"
            android:textAppearance="@style/infoGroup"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/overview_group" />

        <ImageButton
            android:id="@+id/scanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:background="@drawable/ic_scanner"
            app:layout_constraintBottom_toBottomOf="@+id/send_money"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/send_money" />

        <ImageButton
            android:id="@+id/btn_add_send_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:background="@drawable/ic_btn_add"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/send_money" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="@+id/btn_add_send_money"
            app:layout_constraintStart_toEndOf="@id/btn_add_send_money"
            app:layout_constraintTop_toTopOf="@+id/btn_add_send_money"
            tools:listitem="@layout/friend_item" />

        <TextView
            android:id="@+id/services"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="74dp"
            android:gravity="center"
            android:text="Services"
            android:textAppearance="@style/infoGroup"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_send_money" />

        <ImageButton
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:background="@drawable/ic_filter"
            app:layout_constraintBottom_toBottomOf="@+id/services"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/services" />

        <TableLayout
            android:id="@+id/table_services"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="37dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/services"
            android:stretchColumns="*"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>